# find-semantic-release-config

./: .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix
src/: error.rs  lib.rs
tests/: integration_test.rs
tests/test_data/package_json_invalid/: package.json
tests/test_data/package_json_with_release/: package.json
tests/test_data/precedence_config/: package.json
tests/test_data/precedence_releaserc/: release.config.js
